name = "abc160-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc160-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc160-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc160-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc160-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc160-f"
path = "src/bin/f.rs"

[package]
name = "abc160"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc160-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc160/tasks/abc160_a"

[package.metadata.cargo-compete.bin.abc160-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc160/tasks/abc160_b"

[package.metadata.cargo-compete.bin.abc160-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc160/tasks/abc160_c"

[package.metadata.cargo-compete.bin.abc160-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc160/tasks/abc160_d"

[package.metadata.cargo-compete.bin.abc160-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc160/tasks/abc160_e"

[package.metadata.cargo-compete.bin.abc160-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc160/tasks/abc160_f"
