[[bin]]
name = "abc271-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc271-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc271-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc271-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc271-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc271-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc271-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc271-g"
path = "src/bin/g.rs"

[package]
name = "abc271"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc271-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc271/tasks/abc271_a"

[package.metadata.cargo-compete.bin.abc271-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc271/tasks/abc271_b"

[package.metadata.cargo-compete.bin.abc271-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc271/tasks/abc271_c"

[package.metadata.cargo-compete.bin.abc271-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc271/tasks/abc271_d"

[package.metadata.cargo-compete.bin.abc271-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc271/tasks/abc271_e"

[package.metadata.cargo-compete.bin.abc271-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc271/tasks/abc271_h"

[package.metadata.cargo-compete.bin.abc271-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc271/tasks/abc271_f"

[package.metadata.cargo-compete.bin.abc271-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc271/tasks/abc271_g"
