[[bin]]
name = "abc279-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc279-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc279-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc279-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc279-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc279-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc279-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc279-g"
path = "src/bin/g.rs"

[package]
name = "abc279"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc279-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc279/tasks/abc279_a"

[package.metadata.cargo-compete.bin.abc279-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc279/tasks/abc279_b"

[package.metadata.cargo-compete.bin.abc279-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc279/tasks/abc279_c"

[package.metadata.cargo-compete.bin.abc279-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc279/tasks/abc279_d"

[package.metadata.cargo-compete.bin.abc279-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc279/tasks/abc279_e"

[package.metadata.cargo-compete.bin.abc279-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc279/tasks/abc279_h"

[package.metadata.cargo-compete.bin.abc279-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc279/tasks/abc279_f"

[package.metadata.cargo-compete.bin.abc279-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc279/tasks/abc279_g"
