[[bin]]
name = "abc290-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc290-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc290-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc290-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc290-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc290-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc290-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc290-g"
path = "src/bin/g.rs"

[package]
name = "abc290"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc290-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc290/tasks/abc290_a"

[package.metadata.cargo-compete.bin.abc290-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc290/tasks/abc290_b"

[package.metadata.cargo-compete.bin.abc290-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc290/tasks/abc290_c"

[package.metadata.cargo-compete.bin.abc290-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc290/tasks/abc290_d"

[package.metadata.cargo-compete.bin.abc290-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc290/tasks/abc290_e"

[package.metadata.cargo-compete.bin.abc290-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc290/tasks/abc290_h"

[package.metadata.cargo-compete.bin.abc290-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc290/tasks/abc290_f"

[package.metadata.cargo-compete.bin.abc290-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc290/tasks/abc290_g"
