[[bin]]
name = "abc296-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc296-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc296-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc296-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc296-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc296-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc296-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc296-g"
path = "src/bin/g.rs"

[package]
name = "abc296"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc296-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc296/tasks/abc296_a"

[package.metadata.cargo-compete.bin.abc296-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc296/tasks/abc296_b"

[package.metadata.cargo-compete.bin.abc296-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc296/tasks/abc296_c"

[package.metadata.cargo-compete.bin.abc296-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc296/tasks/abc296_d"

[package.metadata.cargo-compete.bin.abc296-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc296/tasks/abc296_e"

[package.metadata.cargo-compete.bin.abc296-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc296/tasks/abc296_h"

[package.metadata.cargo-compete.bin.abc296-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc296/tasks/abc296_f"

[package.metadata.cargo-compete.bin.abc296-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc296/tasks/abc296_g"
