[[bin]]
name = "abc297-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc297-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc297-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc297-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc297-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc297-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc297-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc297-g"
path = "src/bin/g.rs"

[package]
name = "abc297"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc297-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc297/tasks/abc297_a"

[package.metadata.cargo-compete.bin.abc297-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc297/tasks/abc297_b"

[package.metadata.cargo-compete.bin.abc297-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc297/tasks/abc297_c"

[package.metadata.cargo-compete.bin.abc297-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc297/tasks/abc297_d"

[package.metadata.cargo-compete.bin.abc297-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc297/tasks/abc297_e"

[package.metadata.cargo-compete.bin.abc297-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc297/tasks/abc297_h"

[package.metadata.cargo-compete.bin.abc297-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc297/tasks/abc297_f"

[package.metadata.cargo-compete.bin.abc297-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc297/tasks/abc297_g"
