[[bin]]
name = "abc299-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc299-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc299-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc299-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc299-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc299-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc299-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc299-g"
path = "src/bin/g.rs"

[package]
name = "abc299"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc299-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc299/tasks/abc299_a"

[package.metadata.cargo-compete.bin.abc299-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc299/tasks/abc299_b"

[package.metadata.cargo-compete.bin.abc299-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc299/tasks/abc299_c"

[package.metadata.cargo-compete.bin.abc299-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc299/tasks/abc299_d"

[package.metadata.cargo-compete.bin.abc299-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc299/tasks/abc299_e"

[package.metadata.cargo-compete.bin.abc299-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc299/tasks/abc299_h"

[package.metadata.cargo-compete.bin.abc299-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc299/tasks/abc299_f"

[package.metadata.cargo-compete.bin.abc299-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc299/tasks/abc299_g"
