[[bin]]
name = "abc303-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc303-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc303-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc303-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc303-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc303-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc303-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc303-g"
path = "src/bin/g.rs"

[package]
name = "abc303"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc303-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc303/tasks/abc303_a"

[package.metadata.cargo-compete.bin.abc303-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc303/tasks/abc303_b"

[package.metadata.cargo-compete.bin.abc303-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc303/tasks/abc303_c"

[package.metadata.cargo-compete.bin.abc303-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc303/tasks/abc303_d"

[package.metadata.cargo-compete.bin.abc303-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc303/tasks/abc303_e"

[package.metadata.cargo-compete.bin.abc303-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc303/tasks/abc303_h"

[package.metadata.cargo-compete.bin.abc303-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc303/tasks/abc303_f"

[package.metadata.cargo-compete.bin.abc303-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc303/tasks/abc303_g"
