[[bin]]
name = "abc305-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc305-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc305-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc305-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc305-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc305-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc305-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc305-g"
path = "src/bin/g.rs"

[package]
name = "abc305"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc305-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc305/tasks/abc305_a"

[package.metadata.cargo-compete.bin.abc305-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc305/tasks/abc305_b"

[package.metadata.cargo-compete.bin.abc305-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc305/tasks/abc305_c"

[package.metadata.cargo-compete.bin.abc305-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc305/tasks/abc305_d"

[package.metadata.cargo-compete.bin.abc305-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc305/tasks/abc305_e"

[package.metadata.cargo-compete.bin.abc305-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc305/tasks/abc305_h"

[package.metadata.cargo-compete.bin.abc305-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc305/tasks/abc305_f"

[package.metadata.cargo-compete.bin.abc305-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc305/tasks/abc305_g"
