[[bin]]
name = "abc308-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc308-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc308-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc308-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc308-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc308-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc308-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc308-g"
path = "src/bin/g.rs"

[package]
name = "abc308"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc308-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc308/tasks/abc308_a"

[package.metadata.cargo-compete.bin.abc308-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc308/tasks/abc308_b"

[package.metadata.cargo-compete.bin.abc308-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc308/tasks/abc308_c"

[package.metadata.cargo-compete.bin.abc308-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc308/tasks/abc308_d"

[package.metadata.cargo-compete.bin.abc308-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc308/tasks/abc308_e"

[package.metadata.cargo-compete.bin.abc308-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc308/tasks/abc308_h"

[package.metadata.cargo-compete.bin.abc308-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc308/tasks/abc308_f"

[package.metadata.cargo-compete.bin.abc308-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc308/tasks/abc308_g"
