[[bin]]
name = "abc310-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc310-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc310-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc310-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc310-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc310-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc310-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc310-g"
path = "src/bin/g.rs"

[package]
name = "abc310"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc310-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc310/tasks/abc310_a"

[package.metadata.cargo-compete.bin.abc310-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc310/tasks/abc310_b"

[package.metadata.cargo-compete.bin.abc310-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc310/tasks/abc310_c"

[package.metadata.cargo-compete.bin.abc310-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc310/tasks/abc310_d"

[package.metadata.cargo-compete.bin.abc310-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc310/tasks/abc310_e"

[package.metadata.cargo-compete.bin.abc310-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc310/tasks/abc310_h"

[package.metadata.cargo-compete.bin.abc310-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc310/tasks/abc310_f"

[package.metadata.cargo-compete.bin.abc310-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc310/tasks/abc310_g"
