[[bin]]
name = "abc311-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc311-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc311-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc311-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc311-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc311-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc311-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc311-g"
path = "src/bin/g.rs"

[package]
name = "abc311"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc311-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc311/tasks/abc311_a"

[package.metadata.cargo-compete.bin.abc311-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc311/tasks/abc311_b"

[package.metadata.cargo-compete.bin.abc311-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc311/tasks/abc311_c"

[package.metadata.cargo-compete.bin.abc311-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc311/tasks/abc311_d"

[package.metadata.cargo-compete.bin.abc311-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc311/tasks/abc311_e"

[package.metadata.cargo-compete.bin.abc311-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc311/tasks/abc311_h"

[package.metadata.cargo-compete.bin.abc311-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc311/tasks/abc311_f"

[package.metadata.cargo-compete.bin.abc311-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc311/tasks/abc311_g"
