[[bin]]
name = "abc313-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc313-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc313-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc313-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc313-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc313-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc313-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc313-g"
path = "src/bin/g.rs"

[package]
name = "abc313"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc313-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc313/tasks/abc313_a"

[package.metadata.cargo-compete.bin.abc313-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc313/tasks/abc313_b"

[package.metadata.cargo-compete.bin.abc313-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc313/tasks/abc313_c"

[package.metadata.cargo-compete.bin.abc313-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc313/tasks/abc313_d"

[package.metadata.cargo-compete.bin.abc313-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc313/tasks/abc313_e"

[package.metadata.cargo-compete.bin.abc313-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc313/tasks/abc313_h"

[package.metadata.cargo-compete.bin.abc313-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc313/tasks/abc313_f"

[package.metadata.cargo-compete.bin.abc313-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc313/tasks/abc313_g"
