[[bin]]
name = "abc315-a"
path = "src/bin/a.rs"

[[bin]]
name = "abc315-b"
path = "src/bin/b.rs"

[[bin]]
name = "abc315-c"
path = "src/bin/c.rs"

[[bin]]
name = "abc315-d"
path = "src/bin/d.rs"

[[bin]]
name = "abc315-e"
path = "src/bin/e.rs"

[[bin]]
name = "abc315-ex"
path = "src/bin/ex.rs"

[[bin]]
name = "abc315-f"
path = "src/bin/f.rs"

[[bin]]
name = "abc315-g"
path = "src/bin/g.rs"

[package]
name = "abc315"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.abc315-a]
alias = "a"
problem = "https://atcoder.jp/contests/abc315/tasks/abc315_a"

[package.metadata.cargo-compete.bin.abc315-b]
alias = "b"
problem = "https://atcoder.jp/contests/abc315/tasks/abc315_b"

[package.metadata.cargo-compete.bin.abc315-c]
alias = "c"
problem = "https://atcoder.jp/contests/abc315/tasks/abc315_c"

[package.metadata.cargo-compete.bin.abc315-d]
alias = "d"
problem = "https://atcoder.jp/contests/abc315/tasks/abc315_d"

[package.metadata.cargo-compete.bin.abc315-e]
alias = "e"
problem = "https://atcoder.jp/contests/abc315/tasks/abc315_e"

[package.metadata.cargo-compete.bin.abc315-ex]
alias = "ex"
problem = "https://atcoder.jp/contests/abc315/tasks/abc315_h"

[package.metadata.cargo-compete.bin.abc315-f]
alias = "f"
problem = "https://atcoder.jp/contests/abc315/tasks/abc315_f"

[package.metadata.cargo-compete.bin.abc315-g]
alias = "g"
problem = "https://atcoder.jp/contests/abc315/tasks/abc315_g"
