[[bin]]
name = "agc023-a"
path = "src/bin/a.rs"

[[bin]]
name = "agc023-b"
path = "src/bin/b.rs"

[[bin]]
name = "agc023-c"
path = "src/bin/c.rs"

[[bin]]
name = "agc023-d"
path = "src/bin/d.rs"

[[bin]]
name = "agc023-e"
path = "src/bin/e.rs"

[[bin]]
name = "agc023-f"
path = "src/bin/f.rs"

[package]
name = "agc023"
version = "0.1.0"
edition = "2018"

[dependencies]

[dev-dependencies]

[package.metadata.cargo-compete.bin.agc023-a]
alias = "a"
problem = "https://atcoder.jp/contests/agc023/tasks/agc023_a"

[package.metadata.cargo-compete.bin.agc023-b]
alias = "b"
problem = "https://atcoder.jp/contests/agc023/tasks/agc023_b"

[package.metadata.cargo-compete.bin.agc023-c]
alias = "c"
problem = "https://atcoder.jp/contests/agc023/tasks/agc023_c"

[package.metadata.cargo-compete.bin.agc023-d]
alias = "d"
problem = "https://atcoder.jp/contests/agc023/tasks/agc023_d"

[package.metadata.cargo-compete.bin.agc023-e]
alias = "e"
problem = "https://atcoder.jp/contests/agc023/tasks/agc023_e"

[package.metadata.cargo-compete.bin.agc023-f]
alias = "f"
problem = "https://atcoder.jp/contests/agc023/tasks/agc023_f"
