dependencies = [ "once_cell = \"=1.18.0\"", "static_assertions = \"=1.1.0\"", "varisat = \"=0.2.2\"", "memoise = \"=0.3.2\"", "argio = \"=0.2.0\"", "ac-library-rs = \"=0.1.1\"",]
[[bin]]
name = "ahc018-a"
path = "src/bin/a.rs"

[package]
name = "ahc018"
version = "0.1.0"
edition = "2018"

[dev-dependencies]

[package.metadata.cargo-compete.bin.ahc018-a]
alias = "a"
problem = "https://atcoder.jp/contests/ahc018/tasks/ahc018_a"
